2009-07-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/pluginprivate.h, src/makefile.win32, src/plugindata.h,
   src/pluginutils.c, src/plugins.c, src/pluginutils.h,
   src/Makefile.am, ChangeLog, wscript:
   Move plugin_* utility functions to pluginutils.c.
   Add pluginprivate.h.


2009-07-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.txt, doc/geany.html:
   Add some general information about auto-completion capabilities
   (patch by Lex Trotman, thanks).


2009-07-25  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * po/LINGUAS, po/sl_SI.po, THANKS, src/about.c:
   Added a first Slovenian translation. Thanks to Joze Klepec.


2009-07-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Use full styleset_foo[_init] function name as argument to
   init_styleset_case() and styleset_case() macros so it's easier to
   understand the code.
 * src/keybindings.c, src/keybindings.h, src/sciwrappers.c,
   src/sciwrappers.h, src/editor.c, src/editor.h, THANKS,
   doc/geany.txt, doc/geany.html:
   Add 'Reflow lines/paragraph' keybinding, defaults to Ctrl-J.
   Heavily based on a patch by Eugene Arshinov (thanks).
   Add sci_lines_split(), sci_lines_join(), sci_text_width(),
   editor_strip_line_trailing_spaces().


2009-07-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c:
   Attempt to fix reshowing calltips after the autocompletion list
   has been shown.
   Reshow calltips also when the autocompletion list was closed
   implicitly by not choosing an item.


2009-07-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/utils.h, src/toolbar.c, src/plugindata.h,
   plugins/splitwindow.c:
   Change utils_str_remove_chars() to work in place; fix allocating on
   the stack (the string length could exhaust the stack size).
 * src/templates.c, src/build.c, src/utils.c, src/utils.h,
   src/printing.c, src/callbacks.c: