@@ -5,6 +5,8 @@
    src/Makefile.am, ChangeLog, wscript:
    Move plugin_* utility functions to pluginutils.c.
    Add pluginprivate.h.
+ * src/editor.c:
+   Fix reshowing calltip in the wrong document.
 
 
 2009-07-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
